--- a/index.html
+++ b/index.html
@@ -41,17 +41,15 @@
       }
     </style>
   </head>
-  <body class="border-2 border-red-600">
+  <body">
     <!-- nav -->
-    <header
-      class="relative w-full md:w-11/12 lg:w-9/12 mx-auto mt-3 mb-6 border-2 border-white"
-    >
-      <!-- <div
-        class="w-80 h-80 absolute -top-52 left-52 gradient rounded-full z-10 blur(3xl)"
-      ></div> -->
-      <nav class="text-primaryColor flex items-center justify-between my-2">
+    <header class="relative w-full md:w-11/12 lg:w-9/12 mx-auto mt-3 mb-6">
+      <div
+        class="lg:w-80 lg:h-80 w-[8rem] h-[5rem] absolute lg:-top-52 lg:left-52 top-0 left-[60%] gradient rounded-full z-10 blur(3xl)"
+      ></div>
+      <nav class="text-primaryColor flex list-none items-center justify-between my-2">
         <h2 class="font-bold text-3xl hover:underline">Rajib S.</h2>
-        <div class="navmenu hidden lg:flex">
+        <div class="navmenu hidden lg:flex items-center justify-evenly gap-4">
           <li class="hover:underline">Home</li>
           <li class="hover:underline">About</li>
           <li class="hover:underline">Skill</li>
@@ -83,7 +81,7 @@
           >
             <span>Download</span> <span>CV</span>
           </div>
-          <div class="dropdown dropdown-hover">
+           <div class="dropdown right-0 dropdown-hover">
             <div tabindex="0" role="button" class="btn">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -100,7 +98,7 @@
             </div>
             <ul
               tabindex="0"
-              class="dropdown-content menu bg-base-100 rounded-box z-[1] w-52 p-2 shadow"
+              class="dropdown-content menu right-0 bg-base-100 rounded-box z-[1] w-52 p-2 shadow"
             >
               <li class="hover:underline"><a href="#">About</a></li>
               <li class="hover:underline"><a href="#">Home</a></li>
@@ -108,13 +106,13 @@
               <li class="hover:underline"><a href="#">Service</a></li>
               <li class="hover:underline"><a href="#">Cotact</a></li>
             </ul>
-          </div>
+          </div> 
         </div>
       </nav>
     </header>
     <main>
       <!-- banner  -->
-      <!-- <div
+      <div
         class="banner w-9/12 mx-auto gap-2 flex flex-col-reverse justify-between items-center lg:flex-row"
       >
         <div class="content self-center">
@@ -146,21 +144,21 @@
             </div>
           </div>
         </div>
-        <div class="img w-96 relative mx auto ml-8">
+        <div class="img w-9/12 lg:w-96 relative mx auto ml-8">
           <img class="" src="./Images/hero.png" alt="" />
           <div
             class="w-64 h-80 top-[7rem] left-[2rem] transfrom-translate-x-[-2rem] transfrom-translate-y-[5rem] -z-20 gradient rounded-full blur(3xl) absolute"
           ></div>
         </div>
-      </div> -->
+      </div>
 
-      <!-- <div
-        class="bg-[#35343442] text-primaryColor mx-auto text-center  font-bold text-3xl py-4 mb-4"
+      <div
+        class="bg-[#35343442] text-primaryColor mx-auto text-center font-bold text-3xl py-4 mb-4"
       >
         About Me
-      </div> -->
+      </div>
       <!-- short breaf about me  -->
-      <!-- <div
+      <div
         class="items-center bg-base-100 bg-[#63585869] text-white flex flex-col lg:flex-row justify-evenly mb-4"
       >
         <figure class="w-56">
@@ -182,16 +180,21 @@
             Let's connect and create something amazing together!
           </p>
         </div>
-      </div> -->
+      </div>
       <!-- skills  -->
-      <!-- <div>
-      <div
-      class="text-primaryColor mx-auto text-center font-bold text-3xl py-4"
-    >
-      Skills
-    </div>
-<p class="w-2/3 text-center text-white mx-auto mb-6">Proficient in HTML, CSS, JavaScript, and React.js, I specialize in creating responsive and visually stunning web applications. With a strong foundation in UI/UX design and modern development tools, I bring ideas to life with precision and creativity.</p>
-  </div>  -->
+      <div>
+        <div
+          class="text-primaryColor mx-auto text-center font-bold text-3xl py-4"
+        >
+          Skills
+        </div>
+        <p class="w-2/3 text-center text-white mx-auto mb-6">
+          Proficient in HTML, CSS, JavaScript, and React.js, I specialize in
+          creating responsive and visually stunning web applications. With a
+          strong foundation in UI/UX design and modern development tools, I
+          bring ideas to life with precision and creativity.
+        </p>
+      </div>
       <!-- card  -->
       <!-- <div class="grid grid-cols-12 px-4 w-9/12 gap-4">
   <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-3">
