--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </head>
   <body">
     <!-- nav -->
-    <header class="relative w-full md:w-11/12 lg:w-9/12 mx-auto mt-3 mb-6">
+    <header class="relative w-full md:w-11/12 lg:w-9/12 mx-auto mt-3 mb-6 px-2">
       <div
         class="lg:w-80 lg:h-80 w-[8rem] h-[5rem] absolute lg:-top-52 lg:left-52 top-0 left-[60%] gradient rounded-full z-10 blur(3xl)"
       ></div>
@@ -74,15 +74,15 @@
           </svg> -->
         </div>
         <div
-          class="navBox justify-center items-center gap-1 flex md:flex lg:hidden"
+          class="navBox justify-center items-center gap-2 flex md:flex lg:hidden"
         >
           <div
-            class="button hover:underline flex justify-center items-center border-2 border-primaryColor rounded py-2 px-2 gap-2"
+            class="button hover:underline flex justify-center items-center border-2 border-primaryColor rounded py-1 px-2 gap-1 text-sm"
           >
             <span>Download</span> <span>CV</span>
           </div>
            <div class="dropdown right-0 dropdown-hover">
-            <div tabindex="0" role="button" class="btn">
+            <div tabindex="0" role="button">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 viewBox="0 0 24 24"
@@ -147,13 +147,13 @@
         <div class="img w-9/12 lg:w-96 relative mx auto ml-8">
           <img class="" src="./Images/hero.png" alt="" />
           <div
-            class="w-64 h-80 top-[7rem] left-[2rem] transfrom-translate-x-[-2rem] transfrom-translate-y-[5rem] -z-20 gradient rounded-full blur(3xl) absolute"
+            class="w-64 h-80 hidden lg:flex md:flex top-[7rem] left-[2rem] transfrom-translate-x-[-2rem] transfrom-translate-y-[5rem] -z-20 gradient rounded-full blur(3xl) absolute"
           ></div>
         </div>
       </div>
 
       <div
-        class="bg-[#35343442] text-primaryColor mx-auto text-center font-bold text-3xl py-4 mb-4"
+        class="bg-[#35343442] text-primaryColor mx-auto text-center font-bold text-3xl py-4"
       >
         About Me
       </div>
@@ -164,8 +164,8 @@
         <figure class="w-56">
           <img src="./Images/Group 15.png" alt="" />
         </figure>
-        <div class="w-full text-center lg:w-1/2 m-0 p-0">
-          <p>
+        <div class="w-full text-center lg:w-1/2 m-0 p-0 ">
+          <p class="mb-8">
             <span class="text-3xl font-light">Hi,</span>I'm Rajb Sardar, a
             passionate frontend developer with a love for creating visually
             appealing and user-friendly web experiences. With a strong
@@ -182,13 +182,13 @@
         </div>
       </div>
       <!-- skills  -->
-      <div>
+      <div class="my-16">
         <div
           class="text-primaryColor mx-auto text-center font-bold text-3xl py-4"
         >
           Skills
         </div>
-        <p class="w-2/3 text-center text-white mx-auto mb-6">
+        <p class="w-2/3 text-center text-white mx-auto mb-4">
           Proficient in HTML, CSS, JavaScript, and React.js, I specialize in
           creating responsive and visually stunning web applications. With a
           strong foundation in UI/UX design and modern development tools, I
@@ -196,60 +196,134 @@
         </p>
       </div>
       <!-- card  -->
-      <!-- <div class="grid grid-cols-12 px-4 w-9/12 gap-4">
-  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-3">
+      <div class="grid grid-cols-1 md:grid-cols-12 px-2 gap-4 w-full lg:w-9/12 mx-auto">
+  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-6 lg:col-span-3 ">
     <figure>
       <img
         src="./Images/html.png"
         alt="html"
-        class="rounded-xl" />
+        class="rounded-xl mx-auto lg:mx-0" />
     </figure>
-    <div class="text-left">
-      <h2 class="text-white font-bold py-4">HTML5</h2>
-      <p >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
+    <div class="text-center lg:text-left ">
+      <h2 class="text-white font-bold py-4 text-xl">HTML5</h2>
+      <p class="text-sm" >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
 
     </div>
   </div>
-  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-3">
+  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-6 lg:col-span-3">
     <figure>
       <img
-        src="./Images/html.png"
+        src="./Images/css.png"
         alt="html"
-        class="rounded-xl" />
+        class="rounded-xl md:mx-auto lg:mx-0" />
     </figure>
-    <div class="text-left">
-      <h2 class="text-white font-bold py-4">HTML5</h2>
-      <p >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
+    <div class="text-center lg:text-left">
+      <h2 class="text-white font-bold py-4 text-xl">CSS 3</h2>
+      <p class="text-sm" >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
 
     </div>
   </div>
-  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-3">
+  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-6 lg:col-span-3">
     <figure>
       <img
-        src="./Images/html.png"
+        src="./Images/js.png"
         alt="html"
-        class="rounded-xl" />
+        class="rounded-xl mx-auto lg:mx-0" />
     </figure>
-    <div class="text-left">
-      <h2 class="text-white font-bold py-4">HTML5</h2>
-      <p >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
+    <div class="text-center lg:text-left">
+      <h2 class="text-white font-bold py-4 text-xl">JavaScript (ES6+)</h2>
+      <p class="text-sm" >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
 
     </div>
   </div>
-  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-3">
+  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-6 lg:col-span-3">
     <figure>
       <img
-        src="./Images/html.png"
+        src="./Images/react.png"
         alt="html"
-        class="rounded-xl" />
+        class="rounded-xl mx-auto lg:mx-0"/>
     </figure>
-    <div class="text-left">
-      <h2 class="text-white font-bold py-4">HTML5</h2>
-      <p >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
+    <div class="text-center lg:text-left ">
+      <h2 class="text-white font-bold py-4 text-xl">React</h2>
+      <p class="text-sm" >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
 
     </div>
   </div>
-</div> -->
+</div>
+<!-- my Service -->
+<div class="my-16">
+  <div
+    class="text-primaryColor mx-auto text-center font-bold text-3xl py-4"
+  >
+    My Service
+  </div>
+  <p class="w-2/3 text-center text-white mx-auto mb-4">
+    Offering bespoke frontend development and UI/UX design services, I specialize in creating responsive, user-friendly websites that bring your vision to life. Whether you need a simple landing page or a complex web application, I deliver high-quality, tailored solutions.
+  </p>
+</div>
+<!-- services  -->
+ <div class="w-full mx-auto lg:w-9/12 grid gap-4 lg:grid-cols-12 md:grid-cols-12 grid-cols-1">
+
+
+  <div class="box-1 col-span-12 lg:col-span-6 rounded-xl mx-auto lg:mx-0 bg-[#5959592E] p-2 grid grid-cols-12">
+    <div class="img col-span-12 md:col-span-2 lg:col-span-4">
+    <img src="./Images/image 8.png" alt="">
+  </div>
+  <div class="content text-left col-span-12 md:col-span-10 lg:col-span-8">
+    <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
+    <p class="text-sm">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
+  </div>
+  </div>
+  <div class="box-2 col-span-12 md:col-span-6 rounded-xl mx-auto lg:mx-0 bg-[#5959592E] p-4 grid grid-cols-12 ">
+    <div class="img col-span-12 lg:col-span-4 ">
+    <img src="./Images/image 9.png" alt="">
+  </div>
+  <div class="content text-left col-span-12 lg:col-span-8 ">
+    <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
+    <p class="text-sm">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
+  </div>
+  </div>
+  <div class="box-3 col-span-12 md:col-span-6 rounded-xl mx-auto lg:mx-0 bg-[#5959592E] p-4 grid grid-cols-12 ">
+    <div class="img col-span-12 lg:col-span-4  mb-2 md:pb-[2rem] pb-auto ">
+    <img src="./Images/img_new.png" alt="">
+  </div>
+  <div class="content text-left col-span-12 lg:col-span-8  pt-auto ">
+    <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
+    <p class="text-sm ">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
+  </div>
+  </div>
+  <!-- <div class="box-3 col-span-12 md:col-span-6 rounded-xl mx-auto lg:mx-0 bg-[#5959592E] p-4 grid grid-cols-12 gap-4">
+    <div class="img col-span-12 lg:col-span-4 w-9/12 md:pb-2">
+    <img src="./Images/img_new.png" alt="">
+  </div>
+  <div class="content text-left col-span-12 lg:col-span-8">
+    <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
+    <p class="text-sm">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
+  </div>
+  </div> -->
+  <div class="box-4 col-span-12 lg:col-span-6 rounded-xl mx-auto lg:mx-0 bg-[#5959592E] p-2 grid grid-cols-12">
+    <div class="img col-span-12 md:col-span-2 w-9/12 lg:col-span-4">
+    <img src="./Images/image 12.png" alt="">
+  </div>
+  <div class="content text-left col-span-12 md:col-span-10 lg:col-span-8">
+    <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
+    <p class="text-sm">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
+  </div>
+  </div>
+
+
+ </div>
+ <!-- contact  -->
+ <div class="my-16">
+  <div
+    class="text-primaryColor mx-auto text-center font-bold text-3xl py-4"
+  >
+    Contact
+  </div>
+  <p class="w-2/3 text-center text-white mx-auto mb-4">
+    Offering bespoke frontend development and UI/UX design services, I specialize in creating responsive, user-friendly websites that bring your vision to life. Whether you need a simple landing page or a complex web application, I deliver high-quality, tailored solutions.
+  </p>
+</div>
     </main>
   </body>
 </html>
