--- a/index.html
+++ b/index.html
@@ -324,6 +324,17 @@
     Offering bespoke frontend development and UI/UX design services, I specialize in creating responsive, user-friendly websites that bring your vision to life. Whether you need a simple landing page or a complex web application, I deliver high-quality, tailored solutions.
   </p>
 </div>
+<div class="bg-[#6a616181] p-4">
+<div class="w-9/12 grid grid-cols-1 lg:grid-cols-2 mx-auto gap-2">
+  <div class="image rounded-xl "><img src="./Images/image 13.png" alt=""></div>
+  <div class="content bg-transparent grid grid-rows-12 gap-3">
+    <input type="text" class="border-2 border-white bg-transparent rounded-lg py-2 font-normal text-lg row-span-2 px-4" placeholder="Name">
+    <input type="text" class="border-2 border-white bg-transparent rounded-lg py-2 font-normal text-lg row-span-2 px-4" placeholder="Name">
+    <textarea name="Your massage" id="inputHere" rows="4" cols="50" class="border-2 border-white bg-transparent rounded-lg row-span-6 font-normal text-lg px-4 pt-3"placeholder ="Your massage"></textarea>
+    <button class="btn bg-primaryColor font-bold text-xl text-white border-0 btn-block hover:bg-[#00b4ff85] row-span-2">Submit</button>
+  </div>
+</div>
+</div>
     </main>
   </body>
 </html>
