--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
   <div class="image rounded-xl "><img src="./Images/image 13.png" alt=""></div>
   <div class="content bg-transparent grid grid-rows-12 gap-3">
     <input type="text" class="border-2 border-white bg-transparent rounded-lg py-2 font-normal text-lg row-span-2 px-4" placeholder="Name">
-    <input type="text" class="border-2 border-white bg-transparent rounded-lg py-2 font-normal text-lg row-span-2 px-4" placeholder="Name">
+    <input type="text" class="border-2 border-white bg-transparent rounded-lg py-2 font-normal text-lg row-span-2 px-4" placeholder="Email">
     <textarea name="Your massage" id="inputHere" rows="4" cols="50" class="border-2 border-white bg-transparent rounded-lg row-span-6 font-normal text-lg px-4 pt-3"placeholder ="Your massage"></textarea>
     <button class="btn bg-primaryColor font-bold text-xl text-white border-0 btn-block hover:bg-[#00b4ff85] row-span-2">Submit</button>
   </div>
