--- a/index.html
+++ b/index.html
@@ -49,31 +49,20 @@
       ></div>
       <nav class="text-primaryColor flex list-none items-center justify-between my-2">
         <h2 class="font-bold text-3xl hover:underline">Rajib S.</h2>
-        <div class="navmenu hidden lg:flex items-center justify-evenly gap-4">
-          <li class="hover:underline">Home</li>
-          <li class="hover:underline">About</li>
-          <li class="hover:underline">Skill</li>
-          <li class="hover:underline">Service</li>
-          <li class="hover:underline">Cotact</li>
+         <div class="navmenu hidden lg:flex items-center justify-evenly gap-4">
+          <li class="hover:underline"><a href="#home">Home</a></li>
+          <li class="hover:underline"><a href="#About Me">About</a></li>
+          <li class="hover:underline"><a href="#Skill">Skill</a></li>
+          <li class="hover:underline"><a href="#Service">Service</a></li>
+          <li class="hover:underline"><a href="#Contact">Contact</a></li>
           <div
             class="button hover:underline flex justify-center items-center border-2 border-primaryColor rounded py-2 px-2 gap-2"
           >
             <span>Download</span> <span>CV</span>
           </div>
-          <!-- <svg
-            xmlns="http://www.w3.org/2000/svg"
-            viewBox="0 0 24 24"
-            fill="currentColor"
-            class="size-6"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M3 5.25a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 5.25Zm0 4.5A.75.75 0 0 1 3.75 9h16.5a.75.75 0 0 1 0 1.5H3.75A.75.75 0 0 1 3 9.75Zm0 4.5a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Zm0 4.5a.75.75 0 0 1 .75-.75h16.5a.75.75 0 0 1 0 1.5H3.75a.75.75 0 0 1-.75-.75Z"
-              clip-rule="evenodd"
-            />
-          </svg> -->
-        </div>
-        <div
+        
+        </div> 
+         <div
           class="navBox justify-center items-center gap-2 flex md:flex lg:hidden"
         >
           <div
@@ -100,19 +89,19 @@
               tabindex="0"
               class="dropdown-content menu right-0 bg-base-100 rounded-box z-[1] w-52 p-2 shadow"
             >
-              <li class="hover:underline"><a href="#">About</a></li>
-              <li class="hover:underline"><a href="#">Home</a></li>
-              <li class="hover:underline"><a href="#">Skill</a></li>
-              <li class="hover:underline"><a href="#">Service</a></li>
-              <li class="hover:underline"><a href="#">Cotact</a></li>
+            <li class="hover:underline"><a href="#home">Home</a></li>
+            <li class="hover:underline"><a href="#About Me">About</a></li>
+              <li class="hover:underline"><a href="#Skill">Skill</a></li>
+              <li class="hover:underline"><a href="#Service">Service</a></li>
+              <li class="hover:underline"><a href="#Contact">Contact</a></li>
             </ul>
           </div> 
-        </div>
-      </nav>
+        </div> 
+      </nav> 
     </header>
     <main>
       <!-- banner  -->
-      <div
+      <div id="home"
         class="banner w-9/12 mx-auto gap-2 flex flex-col-reverse justify-between items-center lg:flex-row"
       >
         <div class="content self-center">
@@ -153,12 +142,12 @@
       </div>
 
       <div
-        class="bg-[#35343442] text-primaryColor mx-auto text-center font-bold text-3xl py-4"
+        class="bg-[#35343442] text-primaryColor mx-auto text-center font-bold text-3xl py-12"
       >
         About Me
       </div>
       <!-- short breaf about me  -->
-      <div
+   <div id="About Me"
         class="items-center bg-base-100 bg-[#63585869] text-white flex flex-col lg:flex-row justify-evenly mb-4"
       >
         <figure class="w-56">
@@ -180,15 +169,15 @@
             Let's connect and create something amazing together!
           </p>
         </div>
-      </div>
+      </div> 
       <!-- skills  -->
-      <div class="my-16">
+      <div class="my-16" id="Skill">
         <div
           class="text-primaryColor mx-auto text-center font-bold text-3xl py-4"
         >
           Skills
         </div>
-        <p class="w-2/3 text-center text-white mx-auto mb-4">
+        <p class="w-full lg:w-2/3 text-center text-white mx-auto mb-4">
           Proficient in HTML, CSS, JavaScript, and React.js, I specialize in
           creating responsive and visually stunning web applications. With a
           strong foundation in UI/UX design and modern development tools, I
@@ -215,7 +204,7 @@
       <img
         src="./Images/css.png"
         alt="html"
-        class="rounded-xl md:mx-auto lg:mx-0" />
+        class="rounded-xl mx-auto lg:mx-0" />
     </figure>
     <div class="text-center lg:text-left">
       <h2 class="text-white font-bold py-4 text-xl">CSS 3</h2>
@@ -251,13 +240,13 @@
   </div>
 </div>
 <!-- my Service -->
-<div class="my-16">
+<div class="my-16" id="Service">
   <div
     class="text-primaryColor mx-auto text-center font-bold text-3xl py-4"
   >
     My Service
   </div>
-  <p class="w-2/3 text-center text-white mx-auto mb-4">
+  <p class="w-full lg:w-2/3 text-center text-white mx-auto mb-4">
     Offering bespoke frontend development and UI/UX design services, I specialize in creating responsive, user-friendly websites that bring your vision to life. Whether you need a simple landing page or a complex web application, I deliver high-quality, tailored solutions.
   </p>
 </div>
@@ -292,15 +281,7 @@
     <p class="text-sm ">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
   </div>
   </div>
-  <!-- <div class="box-3 col-span-12 md:col-span-6 rounded-xl mx-auto lg:mx-0 bg-[#5959592E] p-4 grid grid-cols-12 gap-4">
-    <div class="img col-span-12 lg:col-span-4 w-9/12 md:pb-2">
-    <img src="./Images/img_new.png" alt="">
-  </div>
-  <div class="content text-left col-span-12 lg:col-span-8">
-    <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
-    <p class="text-sm">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
-  </div>
-  </div> -->
+
   <div class="box-4 col-span-12 lg:col-span-6 rounded-xl mx-auto lg:mx-0 bg-[#5959592E] p-2 grid grid-cols-12">
     <div class="img col-span-12 md:col-span-2 w-9/12 lg:col-span-4">
     <img src="./Images/image 12.png" alt="">
@@ -310,22 +291,21 @@
     <p class="text-sm">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
   </div>
   </div>
-
-
  </div>
  <!-- contact  -->
- <div class="my-16">
+ <div class="my-16" id="Contact">
   <div
     class="text-primaryColor mx-auto text-center font-bold text-3xl py-4"
   >
     Contact
   </div>
-  <p class="w-2/3 text-center text-white mx-auto mb-4">
+  <p class="w-auto lg:w-2/3 text-center text-white mx-auto mb-4">
     Offering bespoke frontend development and UI/UX design services, I specialize in creating responsive, user-friendly websites that bring your vision to life. Whether you need a simple landing page or a complex web application, I deliver high-quality, tailored solutions.
   </p>
-</div>
-<div class="bg-[#6a616181] p-4">
-<div class="w-9/12 grid grid-cols-1 lg:grid-cols-2 mx-auto gap-2">
+</div> 
+<!-- contact form  -->
+ <div class="bg-[#6a61611f] p-4">
+<div class="lg:w-9/12 w-full grid grid-cols-1 lg:grid-cols-2 mx-auto gap-2">
   <div class="image rounded-xl "><img src="./Images/image 13.png" alt=""></div>
   <div class="content bg-transparent grid grid-rows-12 gap-3">
     <input type="text" class="border-2 border-white bg-transparent rounded-lg py-2 font-normal text-lg row-span-2 px-4" placeholder="Name">
@@ -336,5 +316,45 @@
 </div>
 </div>
     </main>
+      <!-- footer  -->
+      <footer >
+      <div class="container footer bg-base-300 text-base-content p-10">
+        <nav>
+          <h6 class="footer-title text-white">Contact Information</h6>
+          <a class="link link-hover" href="mailto:radhanath1542@gmail.com">Email: radhanath1542@gmail.com</a>
+          <a class="link link-hover">Phone:  +91 8583881364</a>
+          <a class="link link-hover">Location:  kolkata , West Bengal</a>
+        </nav>
+        <nav>
+          <h6 class="footer-title text-white">Quick Links</h6>
+          <a class="link link-hover" href="#home">Home</a>
+          <a class="link link-hover" href="#About Me" >About</a>
+          <a class="link link-hover" href="#Service" >Services</a>
+          <a class="link link-hover" href="#Contact" >Contact</a>
+        </nav>
+        <nav>
+          <h6 class="footer-title text-white">Social</h6>
+          <div class="grid grid-flow-col gap-4 items-center">
+            <a>
+            <img src="./Images/icons/image 17.png" alt="">
+            </a>
+            <a>
+<img src="./Images/icons/image 14.png" alt="">
+            </a>
+            <a>
+<img src="./Images/icons/image 15.png" alt="">
+            </a>
+            <a>
+<img src="./Images/icons/image 16.png" alt="">
+            </a>
+          </div>
+        </nav>
+      </div>
+      <div class="bg-base-300 ">
+      <small class=" flex justify-center mx-auto md:hidden lg:hidden">&copy; 2024|RajibPortfolio|All Rights Reserved</small>
+      <small class="hidden md:flex lg:flex justify-center mx-auto">&copy; 2024|RajibPortfolio|All Rights Reserved</small>
+    </div>
+      </footer>
+
   </body>
 </html>
