--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <ul
               tabindex="0"
-              class="dropdown-content menu right-0 bg-base-100 rounded-box z-[1] w-52 p-2 shadow"
+              class="dropdown-content menu right-0 bg-base-100 rounded-box z-[1] w-32 p-2 mt-2 shadow"
             >
             <li class="hover:underline"><a href="#home">Home</a></li>
             <li class="hover:underline"><a href="#About Me">About</a></li>
@@ -155,18 +155,11 @@
         </figure>
         <div class="w-full text-center lg:w-1/2 m-0 p-0 ">
           <p class="mb-8">
-            <span class="text-3xl font-light">Hi,</span>I'm Rajb Sardar, a
-            passionate frontend developer with a love for creating visually
-            appealing and user-friendly web experiences. With a strong
-            foundation in HTML, CSS, and JavaScript, I specialize in building
-            responsive websites that not only look great but also provide a
-            seamless user experience. Over the years, I've honed my skills by
-            working on a variety of projects, from simple landing pages to
-            complex web applications. My goal is to turn creative ideas into
-            functional, engaging digital products. When I'm not coding, I enjoy
-            staying up-to-date with the latest web development trends and
-            continuously learning new technologies to keep my skills sharp.
-            Let's connect and create something amazing together!
+            <span class="text-3xl font-light">Hi,</span>I'm Rajb Sardar, an enthusiastic frontend developer dedicated to crafting visually stunning and highly intuitive web experiences. My expertise lies in HTML, CSS, and JavaScript, where I transform creative visions into responsive, user-centric websites. Whether it’s developing sleek landing pages or complex web applications, I take pride in building digital solutions that are both aesthetically pleasing and functionally seamless.
+
+            Over the years, I’ve had the opportunity to work on diverse projects, allowing me to refine my skills and stay ahead of the curve in a fast-evolving field. I’m committed to continuous learning and staying abreast of the latest web development trends to ensure my work remains cutting-edge.
+            
+            When I'm not immersed in code, I’m passionate about exploring new technologies and innovative design approaches. Let’s connect and collaborate on creating remarkable digital experiences together!
           </p>
         </div>
       </div> 
@@ -186,7 +179,7 @@
       </div>
       <!-- card  -->
       <div class="grid grid-cols-1 md:grid-cols-12 px-2 gap-4 w-full lg:w-9/12 mx-auto">
-  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-6 lg:col-span-3 ">
+  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:underline col-span-6 lg:col-span-3 ">
     <figure>
       <img
         src="./Images/html.png"
@@ -195,11 +188,12 @@
     </figure>
     <div class="text-center lg:text-left ">
       <h2 class="text-white font-bold py-4 text-xl">HTML5</h2>
-      <p class="text-sm" >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
+      <p class="text-sm" >
+        I’m skilled in HTML, expertly crafting clean, semantic code to build dynamic and accessible web pages. My strong grasp of HTML5 allows me to create interactive elements and multimedia content that enhance user experiences. I focus on performance optimization and cross-browser compatibility, ensuring that every project is both functional and visually compelling. Passionate about staying ahead of the curve, I continuously explore the latest HTML techniques to deliver modern, high-quality web solutions.</p>
 
     </div>
   </div>
-  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-6 lg:col-span-3">
+  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:underline col-span-6 lg:col-span-3">
     <figure>
       <img
         src="./Images/css.png"
@@ -208,11 +202,11 @@
     </figure>
     <div class="text-center lg:text-left">
       <h2 class="text-white font-bold py-4 text-xl">CSS 3</h2>
-      <p class="text-sm" >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
+      <p class="text-sm" >I’m proficient in CSS, where I bring designs to life with stylish, responsive layouts. My expertise spans from crafting intricate animations to mastering flexbox and grid systems, ensuring that every website is not only beautiful but also adaptable to any device. With a keen eye for detail and a passion for modern design trends, I create seamless and engaging user interfaces that stand out.</p>
 
     </div>
   </div>
-  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-6 lg:col-span-3">
+  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:underline col-span-6 lg:col-span-3">
     <figure>
       <img
         src="./Images/js.png"
@@ -221,11 +215,11 @@
     </figure>
     <div class="text-center lg:text-left">
       <h2 class="text-white font-bold py-4 text-xl">JavaScript (ES6+)</h2>
-      <p class="text-sm" >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
+      <p class="text-sm" >JavaScript is where my frontend magic happens. I excel at turning static pages into interactive, dynamic experiences through smart scripting. From enhancing UI elements with smooth animations to integrating complex functionalities and APIs, I leverage JavaScript to build engaging and responsive web applications. My approach ensures a rich, user-centric experience that keeps visitors coming back.</p>
 
     </div>
   </div>
-  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:bg-primaryColor col-span-6 lg:col-span-3">
+  <div class="p-3 rounded-xl bg-base-100 border-2 border-primaryColor hover:underline col-span-6 lg:col-span-3">
     <figure>
       <img
         src="./Images/react.png"
@@ -234,7 +228,7 @@
     </figure>
     <div class="text-center lg:text-left ">
       <h2 class="text-white font-bold py-4 text-xl">React</h2>
-      <p class="text-sm" >Crafting clean, semantic, and accessible web structures is at the core of my development process. I ensure that every element is purposefully chosen, enhancing both user experience and SEO. By adhering to best practices</p>
+      <p class="text-sm" >In React, I build fast, scalable user interfaces with reusable components. My expertise in React allows me to create dynamic, high-performance web applications by efficiently managing state and optimizing rendering. I’m passionate about leveraging React’s ecosystem to deliver clean, maintainable code and intuitive user experiences.</p>
 
     </div>
   </div>
@@ -260,7 +254,7 @@
   </div>
   <div class="content text-left col-span-12 md:col-span-10 lg:col-span-8">
     <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
-    <p class="text-sm">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
+    <p class="text-sm">As a frontend developer, I specialize in transforming creative concepts into responsive, high-performance web experiences. My expertise in HTML, CSS, and JavaScript allows me to build dynamic interfaces that are both visually appealing and user-friendly. I’m skilled in crafting seamless user interactions and optimizing performance across various devices and browsers. With a passion for innovation and a keen eye for detail, I ensure that every project not only meets but exceeds user expectations.</p>
   </div>
   </div>
   <div class="box-2 col-span-12 md:col-span-6 rounded-xl mx-auto lg:mx-0 bg-[#5959592E] p-4 grid grid-cols-12 ">
@@ -268,8 +262,8 @@
     <img src="./Images/image 9.png" alt="">
   </div>
   <div class="content text-left col-span-12 lg:col-span-8 ">
-    <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
-    <p class="text-sm">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
+    <h5 class="text-primaryColor font-bold text-xl pb-4">UI/UX Design</h5>
+    <p class="text-sm">I’m adept in UI/UX design, blending creativity with usability to craft intuitive and visually appealing interfaces. My approach involves understanding user needs and translating them into seamless, engaging experiences. From wireframes to high-fidelity mockups, I focus on creating designs that not only captivate users but also enhance overall functionality. My goal is to make every interaction effortless and enjoyable, ensuring that designs are both beautiful and user-centric.</p>
   </div>
   </div>
   <div class="box-3 col-span-12 md:col-span-6 rounded-xl mx-auto lg:mx-0 bg-[#5959592E] p-4 grid grid-cols-12 ">
@@ -277,8 +271,8 @@
     <img src="./Images/img_new.png" alt="">
   </div>
   <div class="content text-left col-span-12 lg:col-span-8  pt-auto ">
-    <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
-    <p class="text-sm ">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
+    <h5 class="text-primaryColor font-bold text-xl pb-4">Web Performance Optimization</h5>
+    <p class="text-sm ">I excel in web performance optimization, ensuring that websites load quickly and run smoothly. By analyzing and refining code, optimizing assets, and leveraging caching strategies, I enhance site speed and efficiency. My focus on performance not only improves user satisfaction but also boosts search engine rankings. I’m dedicated to creating fast, responsive web experiences that keep users engaged and content.</p>
   </div>
   </div>
 
@@ -287,7 +281,7 @@
     <img src="./Images/image 12.png" alt="">
   </div>
   <div class="content text-left col-span-12 md:col-span-10 lg:col-span-8">
-    <h5 class="text-primaryColor font-bold text-xl pb-4">Frontend Development</h5>
+    <h5 class="text-primaryColor font-bold text-xl pb-4">Responsive Design</h5>
     <p class="text-sm">Transforming your ideas into interactive and visually appealing websites. I specialize in HTML5, CSS3, JavaScript, and React.js to build responsive, high-performance web applications that work seamlessly across devices.</p>
   </div>
   </div>
