--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       .gradient {
         background-image: radial-gradient(#00b3ffb3, #00b3ff70, #00b3ff1c);
         filter: blur(62px);
-        body {
+        body, footer {
           font-family: "Inter", sans-serif;
           font-optical-sizing: auto;
           font-weight: 600;
@@ -310,45 +310,45 @@
 </div>
 </div>
     </main>
-      <!-- footer  -->
-      <footer >
-      <div class="container footer bg-base-300 text-base-content p-10">
-        <nav>
-          <h6 class="footer-title text-white">Contact Information</h6>
-          <a class="link link-hover" href="mailto:radhanath1542@gmail.com">Email: radhanath1542@gmail.com</a>
-          <a class="link link-hover">Phone:  +91 8583881364</a>
-          <a class="link link-hover">Location:  kolkata , West Bengal</a>
-        </nav>
-        <nav>
-          <h6 class="footer-title text-white">Quick Links</h6>
-          <a class="link link-hover" href="#home">Home</a>
-          <a class="link link-hover" href="#About Me" >About</a>
-          <a class="link link-hover" href="#Service" >Services</a>
-          <a class="link link-hover" href="#Contact" >Contact</a>
-        </nav>
-        <nav>
-          <h6 class="footer-title text-white">Social</h6>
-          <div class="grid grid-flow-col gap-4 items-center">
-            <a>
-            <img src="./Images/icons/image 17.png" alt="">
-            </a>
-            <a>
-<img src="./Images/icons/image 14.png" alt="">
-            </a>
-            <a>
-<img src="./Images/icons/image 15.png" alt="">
-            </a>
-            <a>
-<img src="./Images/icons/image 16.png" alt="">
-            </a>
-          </div>
-        </nav>
-      </div>
-      <div class="bg-base-300 ">
-      <small class=" flex justify-center mx-auto md:hidden lg:hidden">&copy; 2024|RajibPortfolio|All Rights Reserved</small>
-      <small class="hidden md:flex lg:flex justify-center mx-auto">&copy; 2024|RajibPortfolio|All Rights Reserved</small>
-    </div>
-      </footer>
-
+    
   </body>
+  <!-- footer  -->
+  <footer >
+  <div class="container footer bg-base-300 text-base-content p-10">
+    <nav>
+      <h6 class="footer-title text-white">Contact Information</h6>
+      <a class="link link-hover" href="mailto:radhanath1542@gmail.com">Email: radhanath1542@gmail.com</a>
+      <a class="link link-hover">Phone:  +91 8583881364</a>
+      <a class="link link-hover">Location:  kolkata , West Bengal</a>
+    </nav>
+    <nav>
+      <h6 class="footer-title text-white">Quick Links</h6>
+      <a class="link link-hover" href="#home">Home</a>
+      <a class="link link-hover" href="#About Me" >About</a>
+      <a class="link link-hover" href="#Service" >Services</a>
+      <a class="link link-hover" href="#Contact" >Contact</a>
+    </nav>
+    <nav>
+      <h6 class="footer-title text-white">Social</h6>
+      <div class="grid grid-flow-col gap-4 items-center">
+        <a>
+        <img src="./Images/icons/image 17.png" alt="">
+        </a>
+        <a>
+<img src="./Images/icons/image 14.png" alt="">
+        </a>
+        <a>
+<img src="./Images/icons/image 15.png" alt="">
+        </a>
+        <a>
+<img src="./Images/icons/image 16.png" alt="">
+        </a>
+      </div>
+    </nav>
+  </div>
+  <div class="bg-base-300 ">
+  <small class=" flex justify-center mx-auto md:hidden lg:hidden">&copy; 2024|RajibPortfolio|All Rights Reserved</small>
+  <small class="hidden md:flex lg:flex justify-center mx-auto">&copy; 2024|RajibPortfolio|All Rights Reserved</small>
+</div>
+  </footer>
 </html>
