--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       .gradient {
         background-image: radial-gradient(#00b3ffb3, #00b3ff70, #00b3ff1c);
         filter: blur(62px);
-        body, footer {
+        body {
           font-family: "Inter", sans-serif;
           font-optical-sizing: auto;
           font-weight: 600;
