--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
 </div>
     </main>
     
-    <!-- footer  -->
+    <!-- footer starts here  -->
     <footer >
     <div class="container footer bg-base-300 text-base-content p-10">
       <nav>
